adding new examples